--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
   <h1>dobgoblin</h1>
   <p>Under Construction!</p>
+  <h2>codecademy Projects</h2>
+ <li><a href="">Cheat Sheet</a></li>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
