--- a/cheatsheet/cheatsheet.html
+++ b/cheatsheet/cheatsheet.html
@@ -8,7 +8,7 @@
 
     <body>
         <header>
-            <h1>Web Fundamentals: Cheatsheets</h1>
+            <h1>Web Fundamentals: Cheatsheet</h1>
         </header>
         <main>
             <section id="html">
@@ -97,7 +97,7 @@
 
                                 <tr>
                                     <td>footer</td>
-                                    <td>Represents a footer for its nearest ancestor sectioning content or sectioning root element. A footer typically contains information about the author of the section, copyright data or links to related documents.</td>
+                                    <td>Represents a footer for its nearest ancestor sectioning content or sectioning root element. A <span class="code">footer</span> typically contains information about the author of the section, copyright data or links to related documents.</td>
                                     <td>Content sectioning</td>
                                 </tr>
 
@@ -139,7 +139,7 @@
 
                                 <tr>
                                     <td>blockquote</td>
-                                    <td>Indicates that the enclosed text is an extended quotation. Usually, this is rendered visually by indentation. A URL for the source of the quotation may be given using the cite attribute, while a text representation of the source can be given using the cite element.</td>
+                                    <td>Indicates that the enclosed text is an extended quotation. Usually, this is rendered visually by indentation. A URL for the source of the quotation may be given using the cite attribute, while a text representation of the source can be given using the <span class="code">cite</span> element.</td>
                                     <td>Text content</td>
                                 </tr>
 
@@ -163,7 +163,7 @@
 
                                 <tr>
                                     <td>dt</td>
-                                    <td>Specifies a term in a description or definition list, and as such must be used inside a dl element. It is usually followed by a div element; however, multiple dt elements in a row indicate several terms that are all defined by the immediate next dd element.</td>
+                                    <td>Specifies a term in a description or definition list, and as such must be used inside a <span class="code">dl</span> element. It is usually followed by a <span class="code">div</span> element; however, multiple <span class="code">dt</span> elements in a row indicate several terms that are all defined by the immediate next <span class="code">dd</span> element.</td>
                                     <td>Text content</td>
                                 </tr>
 
@@ -175,7 +175,7 @@
 
                                 <tr>
                                     <td>figure</td>
-                                    <td>Represents self-contained content, potentially with an optional caption, which is specified using the figcaption element. The figure, its caption, and its contents are referenced as a single unit.</td>
+                                    <td>Represents self-contained content, potentially with an optional caption, which is specified using the <span class="code">figcaption</span> element. The figure, its caption, and its contents are referenced as a single unit.</td>
                                     <td>Text content</td>
                                 </tr>
 
@@ -187,13 +187,13 @@
 
                                 <tr>
                                     <td>li</td>
-                                    <td>Represents an item in a list. It must be contained in a parent element: an ordered list (ol), an unordered list (ul), or a menu (menu). In menus and unordered lists,  list items are usually displayed using bullet points. In ordered lists, they are usually displayed with an ascending counter on the left, such as a number or letter.</td>
+                                    <td>Represents an item in a list. It must be contained in a parent element: an ordered list (<span class="code">ol</span>), an unordered list (<span class="code">ul</span>), or a menu (<span class="code">menu</span>). In menus and unordered lists,  list items are usually displayed using bullet points. In ordered lists, they are usually displayed with an ascending counter on the left, such as a number or letter.</td>
                                     <td>Text content</td>
                                 </tr>
 
                                 <tr>
                                     <td>menu</td>
-                                    <td>A semantic alternative to ul, but treated by browsers (and exposed through the accessibility tree) as no different than ul. It represents an unordered list of items (which are represented by li elements).</td>
+                                    <td>A semantic alternative to <span class="code">ul</span>, but treated by browsers (and exposed through the accessibility tree) as no different than <span class="code">ul</span>. It represents an unordered list of items (which are represented by <span class="code">li</span> elements).</td>
                                     <td>Text content</td>
                                 </tr>
                             </tbody>
