add background images to radio and checkbox inputs update page heading style update heading levels text

--- a/designsystem/designsystem.html
+++ b/designsystem/designsystem.html
@@ -3,22 +3,23 @@
     <head>
         <title>Design System</title>
         <link rel="stylesheet" href="designsystem.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     </head>
 
     <body>
 
         <header>
-            <h1>Design System Exercise</h1>
+            <h1 id="page-heading">Design System Exercise</h1>
         </header>
 
         <section id="typography">
             <h2>Typography</h2>
             <h1>This is a level one heading.</h1>
-            <h2>This is a level one heading.</h2>
-            <h3>This is a level one heading.</h3>
-            <h4>This is a level one heading.</h4>
-            <h5>This is a level one heading.</h5>
-            <h6>This is a level one heading.</h6>
+            <h2>This is a level Two heading.</h2>
+            <h3>This is a level Three heading.</h3>
+            <h4>This is a level Four heading.</h4>
+            <h5>This is a level Five heading.</h5>
+            <h6>This is a level Six heading.</h6>
             <p>Paragraph text.</p>
         </section>
 
@@ -107,10 +108,14 @@
             <textarea placeholder="Enter text..." title="Enter a message"></textarea>
 
             <input type="checkbox" id="check1" name="checkbox">
+            <label for="check1"></label>
             <input type="checkbox" id="check2"name="checkbox">
+            <label for="check2"></label>
 
             <input type="radio" id="radio1" name="radio">
+            <label for="radio1"></label>
             <input type="radio" id="radio2" name="radio">
+            <label for="radio2"></label>
 
             <input type="color" title="Select a color">
 
