create styled webpage for fictional tea shop from design spec sheet add link on homepage to tea page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <li><a href="./cheatsheet/cheatsheet.html">Cheat Sheet</a></li>
   <li><a href="./linksandbuttons/lnksbtns.html">Styling Links and Buttons</a></li>
   <li><a href="./designsystem/designsystem.html">Design System Project</a></li>
+  <li><a href="./teashop/teashop.html">The Tea Cozy Project</a></li>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
