change colors add hover state and cursor style to links

--- a/teashop/teashop.html
+++ b/teashop/teashop.html
@@ -10,9 +10,9 @@
             <a><img src="../teashop/resources/imgs/img-tea-cozy-logo.png" alt="Tea Cozy Logo" title="Tea Cozy" id="logo"></a>
             <nav>
                 <ul>
-                    <li class="nav-item" title="Tea Cozy's Mission"><a>Mission</a></li>
-                    <li class="nav-item" title="Featured Tea"><a>Featured Tea</a></li>
-                    <li class="nav-item" title="Tea Cozy Location"><a>Locations</a></li>
+                    <li class="nav-item" title="Tea Cozy's Mission"><a href="#main-content">Mission</a></li>
+                    <li class="nav-item" title="Featured Tea"><a  href="#featured">Featured Tea</a></li>
+                    <li class="nav-item" title="Tea Cozy Location"><a href="#locations">Locations</a></li>
                 </ul>
             </nav>
         </header>
@@ -84,7 +84,7 @@
 
             <section id="contact">
                 <h2>The Tea Cozy</h2>
-                <h5>contact@theteacozy.com</h5>
+                <h5><a href="mailto:jess.dobs@gmail.com">contact@theteacozy.com</a></h5>
                 <h5>917-555-8904</h5>
             </section>
         </main>
