--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <li><a href="./linksandbuttons/lnksbtns.html">Styling Links and Buttons</a></li>
   <li><a href="./designsystem/designsystem.html">Design System Project</a></li>
   <li><a href="./teashop/teashop.html">The Tea Cozy Project</a></li>
+  <li><a href="./fotomatic/F1C1_start/index.html">Fotomatic Responsive Layout Project</a></li>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
