Add in progress html and css for apath

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <li><a href="./designsystem/designsystem.html">Design System Project</a></li>
   <li><a href="./teashop/teashop.html">The Tea Cozy Project</a></li>
   <li><a href="./fotomatic/F1C1_start/index.html">Fotomatic Responsive Layout Project</a></li>
-  <li><a href="./fairgrounds/fairgrounds.html">Company Home Page with Flexbox</a></li>
+  <li><a href="./apath/index.html">Apath Sales Recruiting</a></li>
+  <!--<li><a href="./fairgrounds/fairgrounds.html">Company Home Page with Flexbox</a></li>-->
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
