update stock photos

--- a/apath/index.html
+++ b/apath/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Apath Sales Recruiting</title>
+        <link rel="icon" type="image/x-icon" href="assets/logofav.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
         <link rel="stylesheet" href="style.css">
@@ -46,7 +47,7 @@
                     </div> 
 
                     <div class="col-md-6 order-md-1 my-1">
-                        <img src="assets/group-handshake.jpg" class="img-fluid" alt="Business people sitting at a conference table shaking hands.">
+                        <img src="assets/candidates-test-4.jpeg" class="img-fluid" alt="Business people sitting at a conference table shaking hands.">
                     </div>
                 </div>
             </article>
@@ -58,7 +59,7 @@
                         <p>Our values are the foundation of everything we do. We believe in honesty, integrity, and transparency in all our dealings with our customers. We are committed to providing exceptional expertise in employment needs and delivering on our promises.</p>
                     </div>
                     <div class="col-md-6 my-1">
-                        <img src="assets/man-woman-desk.jpg" class="img-fluid" alt="A man and a woman working together at a desk.">
+                        <img src="assets/values-test-1.jpeg" class="img-fluid" alt="A man and a woman working together at a desk.">
                     </div>
                 </div>
                 
@@ -72,7 +73,7 @@
                     </div>
 
                     <div class="col-md-6 order-md-1 my-1">
-                        <img src="assets/group-handshake.jpg" class="img-fluid" alt="Business people sitting at a conference table shaking hands.">
+                        <img src="assets/experience-test-2.jpeg" class="img-fluid" alt="Business people sitting at a conference table shaking hands.">
                     </div>
                 </div>
                 
@@ -81,21 +82,21 @@
             <article id="services" class="container-fluid py-4 py-sm-5 px-md-5">
                 <div class="row">
                     <div id="customers" class="col-md-4">
-                        <div class="py-3 py-sm-4"><img src="assets/handshake.jpg" alt="" class="mx-auto"></div>
+                        <div class="py-3 py-sm-4 imgcontainer"><img src="assets/test-1.jpeg" alt="" class="mx-auto"></div>
                         <h3 class="text-center"><i class="bi bi-buildings-fill"></i>
                              Businesses</h3>
-                        <p class="px-sm-3">Specializing nationally in placement of Sales, Sales Management, and Executive Level positions. Experise in Mortgage, Real Estate, Packaging, Facility Services and other industries and verticals.</p>
+                        <p class="px-sm-3">Specializing nationally in placement of Sales, Sales Management, and Executive Level positions. Expertise in Mortgage, Real Estate, Packaging, Facility Services and other industries and verticals.</p>
                     </div>
 
                     <div id="candidates" class="col-md-4">
-                        <div class="pb-3 pt-4 py-sm-4"><img src="assets/handshake.jpg" alt="" class="mx-auto"></div>
+                        <div class="pb-3 pt-4 py-sm-4 imgcontainer"><img src="assets/candidates-5.jpeg" alt="" class="mx-auto"></div>
                         <h3 class="text-center"><i class="bi bi-briefcase-fill"></i>
                              Candidates</h3>
                         <p class="px-sm-3">If you're looking to make a change in your career and have a passion for working in Sales with culturally aligned companies that value their employees, we are here to help connect you. Consultations are completely confidential and at no cost to you.</p>
                     </div>
 
                     <div id="ourTeam" class="col-md-4">
-                        <div class="pb-3 pt-4 py-sm-4"><img src="assets/handshake.jpg" alt="" class="mx-auto"></div>
+                        <div class="pb-3 pt-4 py-sm-4 imgcontainer"><img src="assets/team-test-2.jpeg" alt="" class="mx-auto"></div>
                         <h3 class="text-center"><i class="bi bi-people-fill"></i> Our Team</h3>
                         <p class="px-sm-3">We provide superior recruiting and placements to our customers, while maintaining the highest standards of quality and professionalism. We are committed to building lasting relationships with our clients, and working together to achieve success.</p>
                     </div>
